src/Parser/parser.output
   0  $accept : %entry% $end

   1  main : comlist EOL

   2  comlist : com COMP comlist
   3          | combr comlist
   4          | com COMP
   5          | com
   6          | combr COMP comlist
   7          | combr COMP

   8  com : WHILE LPAREN exp RPAREN com
   9      | FOR LPAREN exp RPAREN com
  10      | IF LPAREN exp RPAREN com ELSE com
  11      | IF LPAREN exp RPAREN combr ELSE com
  12      | VAR ASSG exp
  13      | SKIP
  14      | INT VAR
  15      | BOOL VAR
  16      | LAMBDA VAR

  17  combr : LBRACE comlist RBRACE
  18        | WHILE LPAREN exp RPAREN combr
  19        | FOR LPAREN exp RPAREN combr
  20        | IF LPAREN exp RPAREN com ELSE combr
  21        | IF LPAREN exp RPAREN combr ELSE combr

  22  exp : VAR
  23      | NUMBER
  24      | LPAREN exp RPAREN
  25      | exp PLUS exp
  26      | exp MINUS exp
  27      | exp TIMES exp
  28      | exp DIV exp
  29      | exp MOD exp
  30      | MINUS exp
  31      | exp EQ exp
  32      | exp LEQ exp
  33      | exp LT exp
  34      | exp GEQ exp
  35      | exp GT exp
  36      | LPAREN exp RPAREN
  37      | NOT exp
  38      | exp AND exp
  39      | exp OR exp
  40      | TRUE
  41      | FALSE
  42      | exp exp8
  43      | FUN VAR ARROW exp

  44  exp8 : NUMBER
  45       | VAR
  46       | TRUE
  47       | FALSE
  48       | LPAREN exp RPAREN

  49  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (49)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	LAMBDA  shift 11
	.  error

	main  goto 12
	comlist  goto 13
	com  goto 14
	combr  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	combr : LBRACE . comlist RBRACE  (17)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	LAMBDA  shift 11
	.  error

	comlist  goto 16
	com  goto 14
	combr  goto 15


state 4
	com : SKIP .  (13)

	.  reduce 13


state 5
	com : IF . LPAREN exp RPAREN com ELSE com  (10)
	com : IF . LPAREN exp RPAREN combr ELSE com  (11)
	combr : IF . LPAREN exp RPAREN com ELSE combr  (20)
	combr : IF . LPAREN exp RPAREN combr ELSE combr  (21)

	LPAREN  shift 17
	.  error


state 6
	com : WHILE . LPAREN exp RPAREN com  (8)
	combr : WHILE . LPAREN exp RPAREN combr  (18)

	LPAREN  shift 18
	.  error


state 7
	com : FOR . LPAREN exp RPAREN com  (9)
	combr : FOR . LPAREN exp RPAREN combr  (19)

	LPAREN  shift 19
	.  error


state 8
	com : VAR . ASSG exp  (12)

	ASSG  shift 20
	.  error


state 9
	com : INT . VAR  (14)

	VAR  shift 21
	.  error


state 10
	com : BOOL . VAR  (15)

	VAR  shift 22
	.  error


state 11
	com : LAMBDA . VAR  (16)

	VAR  shift 23
	.  error


state 12
	%entry% : '\001' main .  (49)

	.  reduce 49


state 13
	main : comlist . EOL  (1)

	EOL  shift 24
	.  error


state 14
	comlist : com . COMP comlist  (2)
	comlist : com . COMP  (4)
	comlist : com .  (5)

	COMP  shift 25
	RBRACE  reduce 5
	EOL  reduce 5


state 15
	comlist : combr . comlist  (3)
	comlist : combr . COMP comlist  (6)
	comlist : combr . COMP  (7)

	LBRACE  shift 3
	COMP  shift 26
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	LAMBDA  shift 11
	.  error

	comlist  goto 27
	com  goto 14
	combr  goto 15


state 16
	combr : LBRACE comlist . RBRACE  (17)

	RBRACE  shift 28
	.  error


state 17
	com : IF LPAREN . exp RPAREN com ELSE com  (10)
	com : IF LPAREN . exp RPAREN combr ELSE com  (11)
	combr : IF LPAREN . exp RPAREN com ELSE combr  (20)
	combr : IF LPAREN . exp RPAREN combr ELSE combr  (21)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 37


state 18
	com : WHILE LPAREN . exp RPAREN com  (8)
	combr : WHILE LPAREN . exp RPAREN combr  (18)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 38


state 19
	com : FOR LPAREN . exp RPAREN com  (9)
	combr : FOR LPAREN . exp RPAREN combr  (19)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 39


state 20
	com : VAR ASSG . exp  (12)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 40


state 21
	com : INT VAR .  (14)

	.  reduce 14


state 22
	com : BOOL VAR .  (15)

	.  reduce 15


state 23
	com : LAMBDA VAR .  (16)

	.  reduce 16


state 24
	main : comlist EOL .  (1)

	.  reduce 1


state 25
	comlist : com COMP . comlist  (2)
	comlist : com COMP .  (4)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	LAMBDA  shift 11
	RBRACE  reduce 4
	EOL  reduce 4

	comlist  goto 41
	com  goto 14
	combr  goto 15


state 26
	comlist : combr COMP . comlist  (6)
	comlist : combr COMP .  (7)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	LAMBDA  shift 11
	RBRACE  reduce 7
	EOL  reduce 7

	comlist  goto 42
	com  goto 14
	combr  goto 15


state 27
	comlist : combr comlist .  (3)

	.  reduce 3


state 28
	combr : LBRACE comlist RBRACE .  (17)

	.  reduce 17


state 29
	exp : TRUE .  (40)

	.  reduce 40


state 30
	exp : FALSE .  (41)

	.  reduce 41


state 31
	exp : NOT . exp  (37)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 43


state 32
	exp : MINUS . exp  (30)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 44


state 33
	exp : LPAREN . exp RPAREN  (24)
	exp : LPAREN . exp RPAREN  (36)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 45


state 34
	exp : VAR .  (22)

	.  reduce 22


state 35
	exp : NUMBER .  (23)

	.  reduce 23


state 36
	exp : FUN . VAR ARROW exp  (43)

	VAR  shift 46
	.  error


state 37
	com : IF LPAREN exp . RPAREN com ELSE com  (10)
	com : IF LPAREN exp . RPAREN combr ELSE com  (11)
	combr : IF LPAREN exp . RPAREN com ELSE combr  (20)
	combr : IF LPAREN exp . RPAREN combr ELSE combr  (21)
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIV  shift 54
	MOD  shift 55
	EQ  shift 56
	LEQ  shift 57
	LT  shift 58
	GEQ  shift 59
	GT  shift 60
	LPAREN  shift 61
	RPAREN  shift 62
	VAR  shift 63
	NUMBER  shift 64
	.  error

	exp8  goto 65


state 38
	com : WHILE LPAREN exp . RPAREN com  (8)
	combr : WHILE LPAREN exp . RPAREN combr  (18)
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIV  shift 54
	MOD  shift 55
	EQ  shift 56
	LEQ  shift 57
	LT  shift 58
	GEQ  shift 59
	GT  shift 60
	LPAREN  shift 61
	RPAREN  shift 66
	VAR  shift 63
	NUMBER  shift 64
	.  error

	exp8  goto 65


state 39
	com : FOR LPAREN exp . RPAREN com  (9)
	combr : FOR LPAREN exp . RPAREN combr  (19)
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIV  shift 54
	MOD  shift 55
	EQ  shift 56
	LEQ  shift 57
	LT  shift 58
	GEQ  shift 59
	GT  shift 60
	LPAREN  shift 61
	RPAREN  shift 67
	VAR  shift 63
	NUMBER  shift 64
	.  error

	exp8  goto 65


state 40
	com : VAR ASSG exp .  (12)
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIV  shift 54
	MOD  shift 55
	EQ  shift 56
	LEQ  shift 57
	LT  shift 58
	GEQ  shift 59
	GT  shift 60
	LPAREN  shift 61
	VAR  shift 63
	NUMBER  shift 64
	RBRACE  reduce 12
	COMP  reduce 12
	ELSE  reduce 12
	EOL  reduce 12

	exp8  goto 65


state 41
	comlist : com COMP comlist .  (2)

	.  reduce 2


state 42
	comlist : combr COMP comlist .  (6)

	.  reduce 6


state 43
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : NOT exp .  (37)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	LPAREN  shift 61
	TRUE  reduce 37
	FALSE  reduce 37
	AND  reduce 37
	OR  reduce 37
	PLUS  reduce 37
	MINUS  reduce 37
	TIMES  reduce 37
	DIV  reduce 37
	MOD  reduce 37
	EQ  reduce 37
	LEQ  reduce 37
	LT  reduce 37
	GEQ  reduce 37
	GT  reduce 37
	RPAREN  reduce 37
	RBRACE  reduce 37
	COMP  reduce 37
	ELSE  reduce 37
	VAR  reduce 37
	NUMBER  reduce 37
	EOL  reduce 37

	exp8  goto 65


state 44
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : MINUS exp .  (30)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	TIMES  shift 53
	DIV  shift 54
	LPAREN  shift 61
	PLUS  reduce 30
	MINUS  reduce 30
	MOD  reduce 30
	EQ  reduce 30
	LEQ  reduce 30
	LT  reduce 30
	GEQ  reduce 30
	GT  reduce 30
	RPAREN  reduce 30
	RBRACE  reduce 30
	COMP  reduce 30
	ELSE  reduce 30
	VAR  reduce 30
	NUMBER  reduce 30
	EOL  reduce 30

	exp8  goto 65


state 45
	exp : LPAREN exp . RPAREN  (24)
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : LPAREN exp . RPAREN  (36)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIV  shift 54
	MOD  shift 55
	EQ  shift 56
	LEQ  shift 57
	LT  shift 58
	GEQ  shift 59
	GT  shift 60
	LPAREN  shift 61
	RPAREN  shift 68
	VAR  shift 63
	NUMBER  shift 64
	.  error

	exp8  goto 65


state 46
	exp : FUN VAR . ARROW exp  (43)

	ARROW  shift 69
	.  error


state 47
	exp8 : TRUE .  (46)

	.  reduce 46


state 48
	exp8 : FALSE .  (47)

	.  reduce 47


state 49
	exp : exp AND . exp  (38)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 70


state 50
	exp : exp OR . exp  (39)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 71


state 51
	exp : exp PLUS . exp  (25)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 72


state 52
	exp : exp MINUS . exp  (26)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 73


state 53
	exp : exp TIMES . exp  (27)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 74


state 54
	exp : exp DIV . exp  (28)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 75


state 55
	exp : exp MOD . exp  (29)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 76


state 56
	exp : exp EQ . exp  (31)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 77


state 57
	exp : exp LEQ . exp  (32)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 78


state 58
	exp : exp LT . exp  (33)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 79


state 59
	exp : exp GEQ . exp  (34)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 80


state 60
	exp : exp GT . exp  (35)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 81


state 61
	exp8 : LPAREN . exp RPAREN  (48)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 82


state 62
	com : IF LPAREN exp RPAREN . com ELSE com  (10)
	com : IF LPAREN exp RPAREN . combr ELSE com  (11)
	combr : IF LPAREN exp RPAREN . com ELSE combr  (20)
	combr : IF LPAREN exp RPAREN . combr ELSE combr  (21)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	LAMBDA  shift 11
	.  error

	com  goto 83
	combr  goto 84


state 63
	exp8 : VAR .  (45)

	.  reduce 45


state 64
	exp8 : NUMBER .  (44)

	.  reduce 44


state 65
	exp : exp exp8 .  (42)

	.  reduce 42


state 66
	com : WHILE LPAREN exp RPAREN . com  (8)
	combr : WHILE LPAREN exp RPAREN . combr  (18)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	LAMBDA  shift 11
	.  error

	com  goto 85
	combr  goto 86


state 67
	com : FOR LPAREN exp RPAREN . com  (9)
	combr : FOR LPAREN exp RPAREN . combr  (19)

	LBRACE  shift 3
	SKIP  shift 4
	IF  shift 5
	WHILE  shift 6
	FOR  shift 7
	VAR  shift 8
	INT  shift 9
	BOOL  shift 10
	LAMBDA  shift 11
	.  error

	com  goto 87
	combr  goto 88


68: reduce/reduce conflict (reduce 24, reduce 36) on TRUE
68: reduce/reduce conflict (reduce 24, reduce 36) on FALSE
68: reduce/reduce conflict (reduce 24, reduce 36) on AND
68: reduce/reduce conflict (reduce 24, reduce 36) on OR
68: reduce/reduce conflict (reduce 24, reduce 36) on PLUS
68: reduce/reduce conflict (reduce 24, reduce 36) on MINUS
68: reduce/reduce conflict (reduce 24, reduce 36) on TIMES
68: reduce/reduce conflict (reduce 24, reduce 36) on DIV
68: reduce/reduce conflict (reduce 24, reduce 36) on MOD
68: reduce/reduce conflict (reduce 24, reduce 36) on EQ
68: reduce/reduce conflict (reduce 24, reduce 36) on LEQ
68: reduce/reduce conflict (reduce 24, reduce 36) on LT
68: reduce/reduce conflict (reduce 24, reduce 36) on GEQ
68: reduce/reduce conflict (reduce 24, reduce 36) on GT
68: reduce/reduce conflict (reduce 24, reduce 36) on LPAREN
68: reduce/reduce conflict (reduce 24, reduce 36) on RPAREN
68: reduce/reduce conflict (reduce 24, reduce 36) on RBRACE
68: reduce/reduce conflict (reduce 24, reduce 36) on COMP
68: reduce/reduce conflict (reduce 24, reduce 36) on ELSE
68: reduce/reduce conflict (reduce 24, reduce 36) on VAR
68: reduce/reduce conflict (reduce 24, reduce 36) on NUMBER
68: reduce/reduce conflict (reduce 24, reduce 36) on EOL
state 68
	exp : LPAREN exp RPAREN .  (24)
	exp : LPAREN exp RPAREN .  (36)

	.  reduce 24


state 69
	exp : FUN VAR ARROW . exp  (43)

	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 31
	MINUS  shift 32
	LPAREN  shift 33
	VAR  shift 34
	NUMBER  shift 35
	FUN  shift 36
	.  error

	exp  goto 89


state 70
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp AND exp .  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	LPAREN  shift 61
	TRUE  reduce 38
	FALSE  reduce 38
	AND  reduce 38
	OR  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	TIMES  reduce 38
	DIV  reduce 38
	MOD  reduce 38
	EQ  reduce 38
	LEQ  reduce 38
	LT  reduce 38
	GEQ  reduce 38
	GT  reduce 38
	RPAREN  reduce 38
	RBRACE  reduce 38
	COMP  reduce 38
	ELSE  reduce 38
	VAR  reduce 38
	NUMBER  reduce 38
	EOL  reduce 38

	exp8  goto 65


state 71
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp OR exp .  (39)
	exp : exp . exp8  (42)

	LPAREN  shift 61
	TRUE  reduce 39
	FALSE  reduce 39
	AND  reduce 39
	OR  reduce 39
	PLUS  reduce 39
	MINUS  reduce 39
	TIMES  reduce 39
	DIV  reduce 39
	MOD  reduce 39
	EQ  reduce 39
	LEQ  reduce 39
	LT  reduce 39
	GEQ  reduce 39
	GT  reduce 39
	RPAREN  reduce 39
	RBRACE  reduce 39
	COMP  reduce 39
	ELSE  reduce 39
	VAR  reduce 39
	NUMBER  reduce 39
	EOL  reduce 39

	exp8  goto 65


state 72
	exp : exp . PLUS exp  (25)
	exp : exp PLUS exp .  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	TIMES  shift 53
	DIV  shift 54
	LPAREN  shift 61
	PLUS  reduce 25
	MINUS  reduce 25
	MOD  reduce 25
	EQ  reduce 25
	LEQ  reduce 25
	LT  reduce 25
	GEQ  reduce 25
	GT  reduce 25
	RPAREN  reduce 25
	RBRACE  reduce 25
	COMP  reduce 25
	ELSE  reduce 25
	VAR  reduce 25
	NUMBER  reduce 25
	EOL  reduce 25

	exp8  goto 65


state 73
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp MINUS exp .  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	TIMES  shift 53
	DIV  shift 54
	LPAREN  shift 61
	PLUS  reduce 26
	MINUS  reduce 26
	MOD  reduce 26
	EQ  reduce 26
	LEQ  reduce 26
	LT  reduce 26
	GEQ  reduce 26
	GT  reduce 26
	RPAREN  reduce 26
	RBRACE  reduce 26
	COMP  reduce 26
	ELSE  reduce 26
	VAR  reduce 26
	NUMBER  reduce 26
	EOL  reduce 26

	exp8  goto 65


state 74
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp TIMES exp .  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	LPAREN  shift 61
	PLUS  reduce 27
	MINUS  reduce 27
	TIMES  reduce 27
	DIV  reduce 27
	MOD  reduce 27
	EQ  reduce 27
	LEQ  reduce 27
	LT  reduce 27
	GEQ  reduce 27
	GT  reduce 27
	RPAREN  reduce 27
	RBRACE  reduce 27
	COMP  reduce 27
	ELSE  reduce 27
	VAR  reduce 27
	NUMBER  reduce 27
	EOL  reduce 27

	exp8  goto 65


state 75
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp DIV exp .  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	LPAREN  shift 61
	PLUS  reduce 28
	MINUS  reduce 28
	TIMES  reduce 28
	DIV  reduce 28
	MOD  reduce 28
	EQ  reduce 28
	LEQ  reduce 28
	LT  reduce 28
	GEQ  reduce 28
	GT  reduce 28
	RPAREN  reduce 28
	RBRACE  reduce 28
	COMP  reduce 28
	ELSE  reduce 28
	VAR  reduce 28
	NUMBER  reduce 28
	EOL  reduce 28

	exp8  goto 65


state 76
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp MOD exp .  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	TIMES  shift 53
	DIV  shift 54
	LPAREN  shift 61
	PLUS  reduce 29
	MINUS  reduce 29
	MOD  reduce 29
	EQ  reduce 29
	LEQ  reduce 29
	LT  reduce 29
	GEQ  reduce 29
	GT  reduce 29
	RPAREN  reduce 29
	RBRACE  reduce 29
	COMP  reduce 29
	ELSE  reduce 29
	VAR  reduce 29
	NUMBER  reduce 29
	EOL  reduce 29

	exp8  goto 65


state 77
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp EQ exp .  (31)
	exp : exp . LEQ exp  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)

	TRUE  shift 47
	FALSE  shift 48
	AND  shift 49
	OR  shift 50
	PLUS  shift 51
	MINUS  shift 52
	TIMES  shift 53
	DIV  shift 54
	MOD  shift 55
	LPAREN  shift 61
	VAR  shift 63
	NUMBER  shift 64
	RPAREN  reduce 31
	RBRACE  reduce 31
	COMP  reduce 31
	ELSE  reduce 31
	EOL  reduce 31

	exp8  goto 65


state 78
	exp : exp . PLUS exp  (25)
	exp : exp . MINUS exp  (26)
	exp : exp . TIMES exp  (27)
	exp : exp . DIV exp  (28)
	exp : exp . MOD exp  (29)
	exp : exp . EQ exp  (31)
	exp : exp . LEQ exp  (32)
	exp : exp LEQ exp .  (32)
	exp : exp . LT exp  (33)
	exp : exp . GEQ exp  (34)
	exp : exp . GT exp  (35)
	exp : exp . AND exp  (38)
	exp : exp . OR exp  (39)
	exp : exp . exp8  (42)
